tests/PHPStan/DependencyInjection/invalidIgnoreErrors/rawMessage-and-message.neon
parameters:
	ignoreErrors:
		-
			rawMessage: 'One'
			message: '#Two#'
